2006-12-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCC.y (type_specifier2, pointer),
	* src/SDCCsymt.h,
	* src/SDCCsymt.c (mergeSpec, checkSClass),
	* support/Util/SDCCerr.c,
	* support/Util/SDCCerr.h: Parse and validate the restrict keyword
	* support/valdiag/valdiag.py: Allow test cases to specify
	  required language standard
	* support/valdiag/tests/restrict.c: New file to test restrict keyword
	* support/valdiag/tests/tentdecl.c: Supress empty source file error 

2006-12-27 Borut Razem <borut.razem AT siol.net>

	* support/cpp2/cppmain.c, support/cpp2/mbchar.[ch]: removed
	* support/cpp2/libiberty/Makefile.in, support/cpp2/libiberty/sdcpp.dsp:
	  mbchar removed
	* support/cpp2/libiberty/getpwd.c, support/cpp2/sdcpp.h:
	  fixed for borland C
	* support/cpp2/libiberty/Makefile.bcc: updated
	* src/pic16/main.c: fixed #pragma udata handling
	* src/mcs51/mcs51.dsp: added peep.[ch] to the project

2006-12-26 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCpeeph.c: made labelHashEntry global,
	made pcDistance, FBYNAME static,
	(pcDistance): made static, use isComment and isLabel,
	(deadMove): added,
	(getLabelRef): added, extracted from labelRefCount(),
	(labelRefCount): use new getLabelRef(),
	(callFuncByName): made static, added deadMove,
	use isComment and isLabel,
	(newPeepRule): made static, set isLabel,
	(isLabelDefinition): added parameter isPeepRule to allow '%' in
	labels from peephole rules,
	(buildLabelRefCountHash): speed up by running isLabelDefinition() only
	when isComment or isLabel is set
	* src/SDCCpeeph.h: added "isLabel" and "visited" to struct lineNode,
	added labelHashEntry, isLabelDefinition, labelHash and getLabelRef
	to make them global
	* src/mcs51/peep.h: added
	* src/mcs51/peep.c: added, implements mcs51DeadMove()
	* src/port.h: added peep->deadMove to port structure
	* src/mcs51/main.c: initialize peep->deadMove with mcs51DeadMove
	* src/mcs51/peeph.def: renumbered rule 300 to 400, added new rule 300